--- a/src/styles/starships.css
+++ b/src/styles/starships.css
@@ -2,29 +2,24 @@
   margin: 2rem 7rem 2rem 7rem;
   background-color: rgba(64, 60, 60, 0.526);
   padding: 3px;
-  height: 5rem;
+  height: 6rem;
   display: flex;
   cursor: pointer;
-}
-.ships:hover {
-  /* box-shadow: 0 0 20px red; */
-  box-shadow: 0px 0px 20px 10px rgba(255, 0, 0, 0.435);
-}
-.a_ship {
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 8px;
-}
-.a_ship > p {
   padding-left: 1rem;
+}
+.ships:hover {
+  box-shadow: 0px 0px 20px 10px rgba(255, 0, 0, 0.435);
 }
 
 .name-ship {
   text-transform: uppercase;
-}
-.name-ship:hover {
-  color: white;
+  font-family: Fuente-name;
+  font-weight: bold;
 }
 
 #container-btn {
